<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity_personaje">

    <Button
        android:id="@+id/button_change_language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_language"
        app:layout_constraintTop_toBottomOf="@id/button3"
        tools:ignore="MissingConstraints"/>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="303dp"
        app:srcCompat="@drawable/imagen1"
        app:layout_constraintTop_toBottomOf="@id/textView2"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/personaje_name"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
       app:layout_constraintTop_toBottomOf="@id/textView"
        android:text="@string/personaje_descripcion"
        android:textAlignment="center"
        android:textSize="15sp"
        android:textStyle="bold"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button2"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonnext"
        app:layout_constraintTop_toBottomOf="@id/imageView"
        tools:ignore="MissingConstraints" />

    <Button
        android:gravity="center"
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/imageView"
        app:layout_constraintLeft_toRightOf="@id/button2"
        android:text="@string/buttonprevius"
        tools:ignore="MissingConstraints" />
</androidx.constraintlayout.widget.ConstraintLayout>